[package]
name = "crypto-bench-nostd"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.3", default-features = false, features = ["heapless", "aes"] }
anyhow = { version = "1.0.71" }
blake2 = { version = "0.10.6", default-features = false }
blake3 = { version = "1.4.0", default-features = false, features = [
    "pure",
    "digest",
] }
csv = "1.2.2"
digest = { version = "0.10.7", features = ["mac"] }
generic-array = "0.14.7"
heapless = "0.7.16"
morus = { git = "https://github.com/goro-network/morus-rs.git", rev = "15df422", version = "0.1.5", default-features = false }
rand = { version = "0.8.5" }
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
